
lib_LTLIBRARIES=libisoc.la

libisoc_la_LDFLAGS=-version-info 1:0:0

libisoc_la_SOURCES = \
alloc.cpp \
compare.cpp \
device.cpp \
equate.cpp \
event.cpp \
exception.cpp \
hash.cpp \
jni.cpp \
match.cpp \
neighbors.cpp \
net.cpp \
print.cpp \
queue.cpp \
compare.h \
connectivity.h \
debug.h \
env.h \
graph.h \
primes.h \
protos.h \
queue.h \
linux/md.h \
win32/md.h \
solaris/md.h

MOSTLYCLEANFILES = *.log *.ps core FILE *~ 
CLEANFILES = *.log *.ps core FILE *~ 
DISTCLEANFILES = *.log *.ps core FILE *~ 
MAINTAINERCLEANFILES = *.log *.ps core FILE *~ 


